--- a/css/estilo.css
+++ b/css/estilo.css
@@ -213,3 +213,20 @@ footer {
     height: auto;
   }
 }
+
+@media (max-width:768px) {
+	nav{
+		width: 70vW;
+	}
+
+	article {
+		width: 70vw;
+	}
+}
+@media (max-width:425px) {
+	nav,
+	article {
+		width: 100%;
+		min-width: 320px;
+	}
+}
