--- a/css/layouts-fluidos.css
+++ b/css/layouts-fluidos.css
@@ -52,3 +52,20 @@ article{
     margin: 40px auto;
     text-align: center;
 }
+
+@media (max-width:768px) {
+	nav{
+		width: 70vW;
+	}
+
+	article {
+		width: 70vw;
+	}
+}
+@media (max-width:425px) {
+	nav,
+	article {
+		width: 100%;
+		min-width: 320px;
+	}
+}
