--- a/css/socialmedia.css
+++ b/css/socialmedia.css
@@ -25,3 +25,20 @@ div.desc {
     padding: 15px;
     text-align: center;
 }
+
+@media (max-width:768px) {
+	nav{
+		width: 70vW;
+	}
+
+	article {
+		width: 70vw;
+	}
+}
+@media (max-width:425px) {
+	nav,
+	article {
+		width: 100%;
+		min-width: 320px;
+	}
+}
