--- a/css/tabelas.css
+++ b/css/tabelas.css
@@ -68,3 +68,20 @@ tfoot{
 .subtitulo{
 	font-weight: bold;
 }
+
+@media (max-width:768px) {
+	nav{
+		width: 70vW;
+	}
+
+	article {
+		width: 70vw;
+	}
+}
+@media (max-width:425px) {
+	nav,
+	article {
+		width: 100%;
+		min-width: 320px;
+	}
+}
